--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
             <div class="heading">BOOK YOUR AMENITY</div>
             <div class="login-form">
                 <h1 class="login-heading">Login</h1>
-                <form action="/login" method="POST" class="login_form">
+                <form action="/" method="POST" class="login_form">
                     <h3 class="credentials" style="align-self: flex-start;">Username</h3>
                     <input type="text" name="username" placeholder="Enter Username" required>
                     <h3 class="credentials" style="align-self: flex-start;">Password</h3>
