--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -39,7 +39,7 @@
                     <span class="error"><%- message %></span>
                     <input type="submit" value="Submit" id="submit_button">
                 </form>
-                <h3 class="back_login">Already have an account? <a href="login">Login</a></h3>
+                <h3 class="back_login">Already have an account? <a href="/">Login</a></h3>
                 
             </div>
         </div>
