--- a/public/style.css
+++ b/public/style.css
@@ -691,3 +691,14 @@ input[type="radio"]{
     margin-top: 3vh;
     cursor: pointer;
 }
+
+.book_again{
+    padding: 1em;
+    text-decoration: none;
+    font-size: 1.1em;
+    color: #000066;
+}
+
+.book_again:hover{
+    color: #4d88ff;
+}
