--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -27,6 +27,7 @@
                 <input type="submit" name="Submit" value="Logout" class="thankyou_button">
             </div>
         </form>
+        <a href="/home" class="book_again">Click here to book again</a>
         
     </div>
     
