display all bookings

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -185,6 +185,7 @@
                     </div>
                 </div>
             </div>
+            <a href="/viewBookings">View Bookings</a>
             <div class="swiper-button-next swiper-navBtn"></div>
             <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
