--- a/public/style1.css
+++ b/public/style1.css
@@ -141,3 +141,38 @@ form > div{
         margin-right: 0%;
     }
 }
+
+/* ------------View Bookings----------- */
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+.heading_booking{
+    font-size: 2.3em;
+    padding: 0.8em;
+}
+
+.heading_booking::after{
+    content: '';
+    display: block;
+    width: 20%;
+    height: 1px;
+    /* margin: 0.2em auto 1em; */
+    background: black;
+    opacity: 0.5;
+}
+
+.booking_cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.booking_cards .card{
+    margin: 1.5em;
+    background: linear-gradient(to bottom right, #ffffff 0%, #ccffff 100%);
+    border: none;
+    box-shadow: 1px 1px 7px -1px rgba(0, 0, 0, 0.25);
+}
