--- a/views/book.ejs
+++ b/views/book.ejs
@@ -73,19 +73,19 @@
                 <input type="radio" id="time12" name="time" value="12:00 AM to 13:00 PM" class="box-shadow">
                 <label for="time12" class="book_time">12:00 AM to 13:00 PM</label><br>
                 <input type="radio" id="time13" name="time" value="13:00 AM to 14:00 PM" class="box-shadow">
-                <label for="time13" class="book_time">13:00 AM to 14:00 PM</label><br>
+                <label for="time13" class="book_time">13:00 PM to 14:00 PM</label><br>
                 <input type="radio" id="time14" name="time" value="14:00 AM to 15:00 PM" class="box-shadow">
-                <label for="time14" class="book_time">14:00 AM to 15:00 PM</label><br>
+                <label for="time14" class="book_time">14:00 PM to 15:00 PM</label><br>
                 <input type="radio" id="time15" name="time" value="15:00 AM to 16:00 PM" class="box-shadow">
-                <label for="time15" class="book_time">15:00 AM to 16:00 PM</label><br>
+                <label for="time15" class="book_time">15:00 PM to 16:00 PM</label><br>
                 <input type="radio" id="time16" name="time" value="16:00 AM to 17:00 PM" class="box-shadow">
-                <label for="time16" class="book_time">16:00 AM to 17:00 PM</label><br>
+                <label for="time16" class="book_time">16:00 PM to 17:00 PM</label><br>
                 <input type="radio" id="time17" name="time" value="17:00 AM to 18:00 PM" class="box-shadow">
-                <label for="time17" class="book_time">17:00 AM to 18:00 PM</label><br>
+                <label for="time17" class="book_time">17:00 PM to 18:00 PM</label><br>
                 <input type="radio" id="time18" name="time" value="18:00 AM to 19:00 PM" class="box-shadow">
-                <label for="time18" class="book_time">18:00 AM to 19:00 PM</label><br>
+                <label for="time18" class="book_time">18:00 PM to 19:00 PM</label><br>
                 <input type="radio" id="time19" name="time" value="19:00 AM to 20:00 PM" class="box-shadow">
-                <label for="time19" class="book_time">19:00 AM to 20:00 PM</label><br>
+                <label for="time19" class="book_time">19:00 PM to 20:00 PM</label><br>
                 <input type="submit" value="Submit" class="book_submit">
             </form>  
         </div>
