--- a/views/thankyou.ejs
+++ b/views/thankyou.ejs
@@ -28,6 +28,7 @@
             </div>
         </form>
         <a href="/home" class="book_again">Click here to book again</a>
+        <a href="/viewBookings" class="view_bookings">Click here to view bookings</a>
         
     </div>
     
